--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
             	{{#unless this.devoured}}
             	<div>
             		<form action="/burgers/{{this.id}}?_method=PUT" method="POST">
-            			<<button type="submit" class='burgerAvailable'> {{this.burger_ name}}</button>
+            			<button type="submit" class='burgerAvailable'> {{this.burger_name}}</button>
             		</form>
             	</div>
             	{{/unless}}
@@ -34,7 +34,7 @@
 		<form action="burgers" method="POST">
 			<input type="text" id="name" name="
 			burger_name" placeholder="Cheeseburger">
-			<<button type="submit" class="addBurgerButton">Add The Burger</button>
+			<button type="submit" class="addBurgerButton">Add The Burger</button>
 		</form>
 	</div>
 </div>
