hopefully this works

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<img src="/assets/img/burger.jpg" width="400px" id="burger">
+	<img src="./assets/img/burger.jpg" width="400px" id="burger">
 
 	{{{ body }}}
 
@@ -24,5 +24,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+	<script src="./burger.js"></script>
 </body>
 </html>
