--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
             	{{#each burgers}}
             	{{#unless this.devoured}}
             	<div>
-            		<form action="/burgers/{{this.id}}?_method=PUT" method="POST">
+            		<form action="/api/burgers/{{this.id}}?_method=PUT" method="POST">
             			<button type="submit" class='burgerAvailable'> {{this.burger_name}}</button>
             		</form>
             	</div>
@@ -31,10 +31,10 @@
 <h2>Add A Burger Option</h2>
 <div class="row">
 	<div class="col s12">
-		<form action="burgers" method="POST">
+		<form >
 			<input type="text" id="name" name="
 			burger_name" placeholder="Cheeseburger">
-			<button type="submit" class="addBurgerButton">Add The Burger</button>
+			<button type="submit" class="addBurgerButton" id="addBurger">Add The Burger</button>
 		</form>
 	</div>
 </div>
